--- a/docs/v1.md
+++ b/docs/v1.md
@@ -1,16 +1,44 @@
 v1已做的事：
 修改了page的使用，加了一个函数
 加一个pageguard
+TableHeap 接口对齐 schema
+InsertTuple(Tuple)
+页内记录组织升级，slot，以及删除标记
+支持tuple
+
+正在做的事：
+Schema / Tuple
+--定义 Column{name,type(enum),offset(在tuple中的偏移),length(该类型所占字节大小)}、Schema{columns}
+Tuple 能按 schema 编码/解码（哪怕先只支持 int/string）
+
+Catalog
+CreateTable(name, schema)
+GetTable(name)
+ListTables()：（可选）方便调试/展示
+先不做持久化也行（内存 catalog），先把架子搭起来
+
+Iterator/Scan 能返回 Tuple
+
+可以加一下tableIterator
+
+这时再升级 parser（最小子集）
+先只支持：
+CREATE TABLE t (a INT, b INT);（可选）
+INSERT INTO t VALUES (1,2);
+SELECT * FROM t;
+Parser 输出 AST，执行层按 AST 调 catalog/tableheap
+
 
 v1目前需要做的事：
+学习一下这种直接将内存转为page的行为会产生什么问题
+tableheap的测试
+pageallactor
 加一些功能函数
 弄一下ci
 catalog，加入表名，tableid，schema
 支持多表
-页内记录组织升级，slot，以及删除标记
 bufferpool替换策略
 增加bufferpoolmanager
-支持tuple
 支持删除，为update留接口
 执行层框架：init，next
 SeqScanExecutor
