--- a/docs/v1.md
+++ b/docs/v1.md
@@ -8,11 +8,11 @@ InsertTuple(Tuple)
 Catalog
 tableheap的测试
 catalog，加入表名，tableid，schema
+Iterator/Scan 能返回 Tuple（未来可以使用PageGuard + TupleView实现0拷贝
+可以加一下tableIterator
 
 正在做的事：
-Iterator/Scan 能返回 Tuple
 
-可以加一下tableIterator
 
 这时再升级 parser（最小子集）
 先只支持：
