--- a/docs/v1.md
+++ b/docs/v1.md
@@ -10,16 +10,9 @@ tableheap的测试
 catalog，加入表名，tableid，schema
 Iterator/Scan 能返回 Tuple（未来可以使用PageGuard + TupleView实现0拷贝
 可以加一下tableIterator
+支持parser
 
 正在做的事：
-
-
-这时再升级 parser（最小子集）
-先只支持：
-CREATE TABLE t (a INT, b INT);（可选）
-INSERT INTO t VALUES (1,2);
-SELECT * FROM t;
-Parser 输出 AST，执行层按 AST 调 catalog/tableheap
 
 
 v1目前需要做的事：
