--- a/docs/v1.md
+++ b/docs/v1.md
@@ -11,6 +11,8 @@ catalog，加入表名，tableid，schema
 Iterator/Scan 能返回 Tuple（未来可以使用PageGuard + TupleView实现0拷贝
 可以加一下tableIterator
 支持parser
+完成binder
+完成了粗糙的executor
 
 正在做的事：
 
